Fix display of homepage on small phones like mine

--- a/style.css
+++ b/style.css
@@ -62,3 +62,13 @@ footer {
 .deduction-income a {
   color: white;
 }
+
+@media screen and (max-width: 320px) {
+  .black-lives-matter {
+    padding: 0.5em;
+  }
+    
+  .item a {
+    text-align: center;
+  }
+}
